# endurance

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: main.yml  publish.yml
endurance/: __init__.py  __main__.py
