[build-system]
[metadata]
name = endurance
version = attr: endurance.__version__
description = Chromebook modification power-tool.
author = Timothy Pidashev
author_email = pidashev.tim@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = tui, endurance, chromebooks
project_urls =
    Source = https://github.com/timmypidashev/endurance
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
python_requires = >= 3.8
include_package_data = True

[options.packages.find]
include =
    endurance
    endurance.*

[options.package_data]
LICENSE = LICENSE

[options.entry_points]
console_scripts =
    endurance = endurance:run_as_module
